# niri-panel

./: .gitignore  CLAUDE.md  CPU_USAGE_ISSUES.md  Cargo.toml  README.md  build.sh  flake.nix
assets/: style.css
examples/: config.toml  keybindings.toml  sway-config
src/: bluetooth_fixes.rs  config.rs  ipc.rs  lib.rs  main.rs  niri_ipc.rs  panel.rs  places_fixes.rs  popover_registry.rs
src/widgets/: battery.rs  bluetooth.rs  clock.rs  git.rs  keyboard_mode.rs  launcher.rs  mod.rs  network.rs  overview.rs  places.rs  power.rs  search.rs  secrets.rs  servers.rs  sound.rs  workspaces.rs
