[package]
name = "niri-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.7"
gtk4-layer-shell = "0.2"
glib = "0.18"
gdk4 = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
regex = "1.10"
notify = "6.1"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19.0"
glob = "0.3"

# For Niri IPC
async-stream = "0.3"
futures = "0.3"
smithay-client-toolkit = "0.18"

[lib]
name = "niri_panel"
path = "src/lib.rs"

[[bin]]
name = "niri-panel"
path = "src/main.rs"

[[bin]]
name = "niri-panel-ctrl"
path = "src/bin/niri-panel-ctrl.rs"
